# resume-shortlisting

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  schema.sql  test.py
chroma_db/: chroma.sqlite3
data/: app_store.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AuthPage.jsx  EmployeePage.jsx  EmployerPage.jsx
frontend/src/services/: api.js
parser/: config.py  extractor.py  main.py
resume_parser/: __init__.py  config.py  extractor.py  main.py  models.py  parser.py
scorer/: config.py  db_mongo.py  db_postgres.py  embedder.py  feedback_store.json  feedback_store.py  jd_parser.py  main.py  models.py  scorer.py  vector_store.py
