[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-shortlisting"
version = "0.1.0"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "python-multipart==0.0.9",
    "pdfplumber==0.11.4",
    "python-docx==1.1.2",
    "litellm==1.83.1",
    "pydantic==2.12.5",
    "chromadb>=1.5.5",
    "fastembed>=0.8.0",
]

[tool.setuptools]
packages = []
